--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,7 @@ body {
     font-size: 17px;
     color: #5b6064;
     font-weight: 400;
-    background-color: #FBFBFB;
+    background-color: #FDFDFD;
 }
 
 h1 {
